--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dishita Jhawar HW0</title>
+    <head>
+    <meta charset="utf-8" />
+    <title>Draw a blue rectangle (canvas version)</title>
 </head>
-<body>
-    <h1>Welcome to My Live Submission</h1>
+
+<body onload="main()">
+    <canvas id="example" width="400" height="400">
+    Please use a browser that supports "canvas"
+    </canvas>
+    <script src="asgn0.js"></script>
+    <script src='./lib/cuon-matrix.js'></script>
+
+    <form>
+        <label for = "x1coord">v1: x</label>
+        <input type="number" id="x1coord" name="x1coord">
+        <label for = "y1coord">y</label>
+        <input type="number" id="y1coord" name="y1coord"><br> <!-- br tag is a line break -->
+        
+        <label for = "x2coord">v2: x</label>
+        <input type="number" id="x2coord" name="x2coord">
+        <label for = "y2coord">y</label>
+        <input type="number" id="y2coord" name="y2coord"><br> 
+    
+        <input type="button" value="Draw" onclick="handleDrawEvent()"><br>
+
+
+        <label for="operation">Operation:</label>
+        <select id="operation" name="operation">
+            <option value="add">Add</option>
+            <option value="sub">Subtract</option>
+            <option value="mul">Multiply</option>
+            <option value="div">Divide</option>
+            <option value="mag">Magnitude</option>
+            <option value="norm">Normalize</option>
+            <option value="angle">Angle Between</option>
+            <option value="area">Area</option>
+
+        </select>
+        <input type="number" id="scalar" name="scalar"><br> 
+        <input type="button" value="Draw" onclick="handleDrawOperationEvent()">
+        </select>
+
+    </form>
 </body>
 </html>
